--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Tauri + React + TS</title>
+        <meta charset="utf-8" />
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+        <title>Hello Electron React!</title>
     </head>
-
     <body>
         <div id="root"></div>
-        <script type="module" src="/src-renderer/index.tsx"></script>
     </body>
 </html>
