--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
-        <title>Hello Electron React!</title>
+        <title>Cruise</title>
     </head>
     <body>
         <div id="root"></div>
